--- a/.travis.yml
+++ b/.travis.yml
@@ -11,18 +11,15 @@ addons:
     - python-pip
 
 install:
-  # Install ansible
-  - pip install ansible
-
   # Create ansible.cfg with correct roles_path
   - printf '[defaults]\nroles_path=../' >ansible.cfg
-  - pip install docker-compose
-  - molecule
+  - pip install pipenv
+  - pipenv install
 
 script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
-  - molecule test
+  - pipenv run molecule test
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
